# vitalmed--

./: .gitignore  API_REFERENCE.md  DEBUG.bat  DEBUG.sh  FIXES_APPLIED.md  README.md  TROUBLESHOOTING.md  package-lock.json  start_project.bat  upload_test.js
core/: CMakeLists.txt
core/include/core/: DatasetSelector.hpp  DecisionRouter.hpp  FallbackResponseComposer.hpp  IntentParser.hpp  Logger.hpp  MemoryHook.hpp  OllamaHealthChecker.hpp  ResponseComposer.hpp  StorageManager.hpp  Validator.hpp
core/include/engines/: ApiEngine.hpp  CnnEngine.hpp  HybridEngine.hpp  LlmEngine.hpp  RagEngine.hpp  ReasoningEngine.hpp  StructuredEngine.hpp
core/include/models/: AIRequest.hpp  AIResponse.hpp  DatasetMetadata.hpp  UploadResult.hpp
core/include/server/: ChatController.hpp  HealthController.hpp  HttpServer.hpp  UploadController.hpp
core/include/upload/: AutoPipelineRouter.hpp  ContentExtractor.hpp  DataQualityChecker.hpp  FileReceiver.hpp  FileTypeDetector.hpp  FileValidator.hpp  SchemaInferenceEngine.hpp  StorageRouter.hpp  StructureDetector.hpp
core/src/: main.cpp
core/src/core/: DatasetSelector.cpp  DecisionRouter.cpp  FallbackResponseComposer.cpp  IntentParser.cpp  Logger.cpp  MemoryHook.cpp  OllamaHealthChecker.cpp  ResponseComposer.cpp  StorageManager.cpp  Validator.cpp
core/src/engines/: CnnEngine.cpp  Engines.cpp  HybridEngine.cpp
core/src/server/: ChatController.cpp  HealthController.cpp  HttpServer.cpp  UploadController.cpp
core/src/upload/: UploadPipeline.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.js
(+6 files in other folders)
